trip calendar added without functionalities and database integration yet

--- a/travel_together_app/travel_together/templates/base.html
+++ b/travel_together_app/travel_together/templates/base.html
@@ -11,6 +11,7 @@
       rel="resources"
       href="{{ url_for('static', filename='resources') }}"
     />
+    {% block styles %}{% endblock %}
   </head>
   <body>
     <header>
@@ -37,6 +38,8 @@
       src="https://code.jquery.com/jquery-3.7.1.min.js"
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"></script>
-    <script src="{{ url_for('static', filename='travel-together.js') }}"></script>
+    {% block scripts %}
+      <script src="{{ url_for('static', filename='travel-together.js') }}"></script>
+    {% endblock %}
   </body>
 </html>
