--- a/travel_together_app/travel_together/templates/main/trip.html
+++ b/travel_together_app/travel_together/templates/main/trip.html
@@ -58,7 +58,10 @@
 <div class="single_trip_container">
   <img class="trip-photo" src="{{ url_for('static', filename='resources/example-trip-1.jpg') }}" alt="Avatar">
         <h2 class="trip-title">{{ trip.title }}</h2>    
-        <p class="trip-time-created">Created {{ trip.timestamp|time_ago }} by {{ trip.creator.name }}</p>
+        <p class="trip-time-created">Created {{ trip.timestamp|time_ago }} by 
+          <a href="{{ url_for('main.profile', user_id=trip.creator.id) }}" style="text-decoration: none; color: inherit;"> 
+            {{ trip.creator.name }}
+          </a></p>
         <p class="trip-description">{{ trip.description }}</p>
         <p class="trip-origin">Origin: {{ trip.origin }}</p>
         <p class="trip-destinations">Destination(s): {{ trip.destinations }}</p>
