prevented add forum from breaking when input is left empty

--- a/travel_together_app/travel_together/templates/main/trip.html
+++ b/travel_together_app/travel_together/templates/main/trip.html
@@ -163,7 +163,7 @@
               </div>
             <textarea name="message-content" rows="4" cols="50" placeholder="What's on your mind?"></textarea>
             <br>
-            <button type="submit">Send</button>
+            <button type="submit" #message-board-area>Send</button>
           </form>
         </div>
       </div>
