--- a/travel_together_app/travel_together/static/css/login.css
+++ b/travel_together_app/travel_together/static/css/login.css
@@ -20,7 +20,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 2vw;
     box-sizing: border-box;
 
     width: 30%;
@@ -36,26 +36,26 @@
 .login-container h2 {
     text-align: center;
     border-bottom: 1px solid black;
-    padding-bottom: 20px;
+    padding-bottom: 1vw;
     width: 100%;
     
 }
 
 .form-container {
     width: 100%;
-    height: 80%;
+    height: auto;
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    gap: 15px;
+    gap: 2vh;
     align-items: center;
 }
 
 .credential-inputs {
-    margin-top: 20px;
+    margin-top: 2vh;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 1vh;
     width: 100%;
     flex-grow: 1;
 }
@@ -64,16 +64,19 @@
 .form-container input[type="password"] {
     width: 100%;
     box-sizing: border-box;
-    padding: 10px;
+    padding: 0.5vw;
     background-color: #f2e0c3;
     border-radius: 15px;
     border: 1px solid #ccc;
     box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.1);
+    line-height: 1.5;
+    height: 2.5vw;
+    padding-left: 1vw;
 }
 
 .form-container input[type="submit"] {
     width: 100%;
-    padding: 10px;
+    padding: 0.5vw;
     background-color: #D6C6AF;
     border-radius: 15px;
     border: 1px solid #ccc;
@@ -96,7 +99,7 @@
 
 .info-container {
     flex-grow: 1;
-    padding: 40px;
+    padding: 2vw;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -111,5 +114,5 @@
     width: 30%;
     height: auto;
     border-radius: 15px;
-    margin-bottom: 20px;
+    margin-bottom: 1vw;
 }
