--- a/travel_together_app/travel_together/static/travel-together.css
+++ b/travel_together_app/travel_together/static/travel-together.css
@@ -1,12 +1,15 @@
+html {
+    font-size: 1vw;
+}
+
 body {
   margin: 0;
   padding: 0;
   background: #f2e0c3;
   color: black;
   font-family: arial, sans-serif;
-  font-size: 14px;
+  font-size: 1rem;
   padding-top: 60px;
-  padding-bottom:30px;
 }
 
 body footer {
@@ -19,6 +22,12 @@ body footer {
   color: #888;
 }
 
+h1 { font-size: 2rem; }
+h2 { font-size: 1.5rem; }
+
+p, span, label, input, textarea, select {
+    font-size: 1rem;
+}
 
 /*============================== HEADER ==============================*/
 
@@ -27,12 +36,10 @@ body footer {
   top: 0;
   left: 0;
   height: 60px;
-  width: calc(100% - 20px);
+  width: calc(100% - 20px);  /* subtract padding from total width */
   font-weight: strong;
-  /* subtract padding from total width */
   padding: 0px 10px;
-  z-index: 99;
-  /* keeps it above everything */
+  z-index: 99;  /* keeps it above everything */
 
   display: flex;
   justify-content: space-between;
@@ -97,10 +104,6 @@ body footer {
   text-shadow: none;
 }
 
-input {
-  margin-top: 2px;
-  margin-bottom: 2px;
-}
 
 /*============================== FEED ==============================*/
 
