--- a/travel_together_app/travel_together/static/travel-together.css
+++ b/travel_together_app/travel_together/static/travel-together.css
@@ -47,7 +47,7 @@ p, span, label, input, textarea, select {
 
   text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.7);
   background-color: rgba(100, 100, 100, 0.2);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 0.25vh solid rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(6px);
 }
 
