--- a/travel_together_app/travel_together/static/css/index.css
+++ b/travel_together_app/travel_together/static/css/index.css
@@ -21,7 +21,7 @@
     width: 40%;
     height: 100%;
     background-color: white;
-    clip-path: polygon(0 0, 100% 0, 51% 100%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 51% 100%, 0% 100%); /* generated manually using https://bennettfeely.com/clippy/ */
     display: flex;
     flex-direction: column;
     justify-content: center;
