--- a/travel_together_app/travel_together/static/travel-together.css
+++ b/travel_together_app/travel_together/static/travel-together.css
@@ -10,6 +10,7 @@ body {
   font-family: arial, sans-serif;
   font-size: 1rem;
   padding-top: 60px;
+  margin-bottom: 3vh;
 }
 
 body footer {
@@ -20,6 +21,7 @@ body footer {
   padding: 10px;
   font-size: 12px;
   color: #888;
+  pointer-events: none;
 }
 
 h1 { font-size: 2rem; }
