--- a/travel_together_app/travel_together/static/travel-together.css
+++ b/travel_together_app/travel_together/static/travel-together.css
@@ -10,7 +10,6 @@ body {
   font-family: arial, sans-serif;
   font-size: 1rem;
   padding-top: 60px;
-  margin-bottom: 3vh;
 }
 
 body footer {
@@ -22,6 +21,10 @@ body footer {
   font-size: 12px;
   color: #888;
   pointer-events: none;
+}
+
+.footer-padding{
+  padding-bottom: 30px;
 }
 
 h1 { font-size: 2rem; }
