--- a/travel_together_app/travel_together/templates/base.html
+++ b/travel_together_app/travel_together/templates/base.html
@@ -33,6 +33,7 @@
       </div>
     </header>
     <section class="content">{% block content %}{% endblock %}</section>
+    <div class="footer-padding"></div>
     <footer><small>Developed for Web applications</small></footer>
     <script
       src="https://code.jquery.com/jquery-3.7.1.min.js"
