added return buttons from trip views and fixed return button from trip form

--- a/travel_together_app/travel_together/templates/base.html
+++ b/travel_together_app/travel_together/templates/base.html
@@ -34,7 +34,7 @@
     </header>
     <section class="content">{% block content %}{% endblock %}</section>
     <div class="footer-padding"></div>
-    <footer><small>Developed for Web applications</small></footer>
+    <footer><small>Developed for Web Applications</small></footer>
     <script
       src="https://code.jquery.com/jquery-3.7.1.min.js"
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
