--- a/travel_together_app/travel_together/templates/main/trip.html
+++ b/travel_together_app/travel_together/templates/main/trip.html
@@ -192,4 +192,10 @@
     <script src="{{ url_for('static', filename='calendar_init.js') }}"></script>
   {% endif %}
 
+  <div>
+    <a href="{{ url_for('main.index') }}">
+      <button type="submit">Return</button>
+    </a>
+  </div>
+
 {% endblock %}
