--- a/travel_together_app/travel_together/templates/main/trip_form.html
+++ b/travel_together_app/travel_together/templates/main/trip_form.html
@@ -54,14 +54,16 @@
         </div>
 
         <br>
-        <a href = "/">
+        <a href="{{ url_for('main.index') }}">
             <button type="submit">Publish</button>
         </a>
         </form>
     </section>
 </div>
 <br>
-<a href="/">
-    <button>Return</button>
+
+<a href="{{ url_for('main.index') }}">
+    <button type="submit">Return</button>
 </a>
+
 {% endblock %}
