--- a/travel_together_app/travel_together/templates/main/trip.html
+++ b/travel_together_app/travel_together/templates/main/trip.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} 
 
-{% block styles %}
+{% block head %}
   {{ super() }}
   <style>
     /* Basic FullCalendar styles - inline to avoid CORS */
