--- a/travel_together_app/travel_together/static/css/login.css
+++ b/travel_together_app/travel_together/static/css/login.css
@@ -1,7 +1,9 @@
-.body {
+body, html {
     overflow: hidden;
     overscroll-behavior: none;
     touch-action: none;
+    padding-bottom: 0;
+    height: 100%;
 } /* Doesn't work, might fix later (it's to prevent the "bounce" on scroll) */
 
 /*=========================== PAGE LAYOUT ===========================*/
@@ -10,7 +12,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 100%;
+    height: calc(100vh - 60px);
 }
 
 /*=========================== LOGIN CONTAINER ===========================*/
