--- a/travel_together_app/travel_together/static/travel-together.css
+++ b/travel_together_app/travel_together/static/travel-together.css
@@ -1,8 +1,11 @@
 html {
     font-size: 1vw;
+    height: 100%;
+    overscroll-behavior: none;
 }
 
 body {
+  min-height: 100%;
   margin: 0;
   padding: 0;
   background: #f2e0c3;
@@ -10,6 +13,7 @@ body {
   font-family: arial, sans-serif;
   font-size: 1rem;
   padding-top: 60px;
+  padding-bottom: 4vh;
 }
 
 body footer {
@@ -21,10 +25,6 @@ body footer {
   font-size: 12px;
   color: #888;
   pointer-events: none;
-}
-
-.footer-padding{
-  padding-bottom: 30px;
 }
 
 h1 { font-size: 2rem; }
