--- a/travel_together_app/travel_together/templates/base.html
+++ b/travel_together_app/travel_together/templates/base.html
@@ -11,7 +11,7 @@
       rel="resources"
       href="{{ url_for('static', filename='resources') }}"
     />
-    {% block styles %}{% endblock %}
+    {% block head %}{% endblock %}
   </head>
   <body>
     <header>
@@ -33,7 +33,6 @@
       </div>
     </header>
     <section class="content">{% block content %}{% endblock %}</section>
-    <div class="footer-padding"></div>
     <footer><small>Developed for Web Applications</small></footer>
     <script
       src="https://code.jquery.com/jquery-3.7.1.min.js"
