--- a/travel_together_app/travel_together/templates/main/edit_profile.html
+++ b/travel_together_app/travel_together/templates/main/edit_profile.html
@@ -1,34 +1,83 @@
+{% extends 'base.html' %}
 {% block head %}
     <title> Edit Profile</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/signup.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/edit_profile.css') }}"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slim-select/dist/slimselect.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slim-select/dist/slimselect.min.js"></script>
+    <script id="universities-json" type="application/json">
+        {{ universities | tojson | safe }}
+    </script>
+    <script src="{{ url_for('static', filename='js/universities.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/signup2.js') }}"></script>
 {% endblock %}
-
-{% extends 'base.html' %}
 
 {% if current_user.is_authenticated %}
     <div>User: {{current_user.name}}</div>
 {% endif %}
 {% block content %}
     <div class="main-container">
+        <h2 class="title-header">Edit Profile</h2>
+        <form action="{{ url_for('auth.edit_profile_post') }}" method="post" enctype="multipart/form-data">
         <div class="edit-container">
-            <h2>Edit Profile Details   </h2>
-            <form class="form-container" action="{{ url_for('auth.edit_profile_post') }}" method="post" enctype="multipart/form-data">
+            <div class="lefthand-inputs input-flex">
+                <h2>Personal information</h2>
                 <div class="credential-inputs">
-                    <input type="text" name="description" placeholder="Description" value = "{{ current_user.desc or '' }}" />
+                    <label for="country">Country:</label>
+                    <select id="country" name="country" required>
+                        {% for code, name in countries %}
+                        <option value="{{ code }}" {% if code == current_user.country %}selected{% endif %} >{{ name }}</option>
+                        {% endfor %}
+                    </select>
+                    <label for="birthday">Birthday:</label>
                     <input type="date" name="birthday" placeholder="Birthday" value = "{{ current_user.birthday or '' }}" required />
-                    <input type="text" name="home_uni" placeholder="Home University" value = "{{ current_user.home_uni or '' }}" required />
-                    <input type="text" name="visiting_uni" placeholder="Visiting University" value = "{{ current_user.visiting_uni or '' }}" required/>
-                    <input type="text" name="country" placeholder="Country" value = "{{ current_user.country or '' }}" required/>
-                    <input type="file" id="profile_pic" name="profile_pic" accept="image/*" >
+                    <label for="description">Description:</label>
+                    <textarea name="description" placeholder = "{{ current_user.desc or "Tell us something about yourself" }}"></textarea>
+                </div>
+            </div>
+            <div class="profile-pic-input">
+                <label for="profile-pic">
+                    <img class="pfp" id="pfp-preview" src="{{ url_for('static', filename='resources/' ~ (current_user.profile_pic or 'Defaultpfp.png')) }}">
+                </label>
+                <label for="profile-pic">Change picture</label>
+                <input type="file" id="profile-pic" name="profile-pic" accept="image/*" >
+            </div>
+            <div class="righthand-inputs input-flex">
+                <h2>Universities</h2>
+                <div class="credential-inputs">
+                    <label class="required">Home university</label>
+                    <div class="uni-choice">
+                        <select id="home_uni_country" name="home_uni_country">
+                            <option value="" disabled selected>Country</option>
+                            {% for code, name in countries %}
+                            <option value="{{ code }}">{{ name }}</option>
+                            {% endfor %}
+                        </select>
+                        <select id="home_uni" name="home_uni">
+                            <option value="" disabled selected>University</option>
+                        </select>
+                    </div>
+                    <label>Visiting university</label>
+                    <div class="uni-choice">
+                        <select id="visiting_uni_country" name="visiting_uni_country">
+                            <option value="" disabled selected>Country</option>
+                            {% for code, name in countries %}
+                            <option value="{{ code }}">{{ name }}</option>
+                            {% endfor %}
+                        </select>
+                        <select id="visiting_uni" name="visiting_uni">
+                            <option value="" disabled selected>University</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="edit-profile-buttons">
-                    <input type="submit" value="Save Changes"/>
-                    <br><br>
                     <a href="{{ url_for('main.profile', user_id=current_user.id) }}">
-                        <button type="button">Return to Profile Page</button>
+                        <button class="submit-button" type="button">Cancel</button>
                     </a>
+                    <input class="submit-button" type="submit" value="Save Changes"/>
                 </div>
-            </form>
+            </div>
+        </form>
         </div>
     </div>
 {% endblock %}
